using System;
using UnityEngine;
using UnityEngine.UI;
[CreateAssetMenu(menuName = "GameData/ChampionUI", order = 1)]

public class ChampionUI : ScriptableObject
{    
    public Image ActionBarPanel;
    public Image Ability1;
    public Image Ability2;
    public Image Ability3;
    public Image Ability4;
    public Image Ability5;
    public Image SummonerSpeel1;
    public Image SummonerSpeel2;
}
